<resources>
    <string name="app_name">GganbuActivity</string>
    <string name="id">아이디</string>
    <string name="password">비밀번호</string>
    <string name="register">회원가입</string>
    <string name="login">로그인</string>
    <string name="male">남성</string>
    <string name="female">여성</string>
    <string name="name">이름</string>
    <string name="age">나이</string>
    <string name="location">위치</string>
    <string name="birth">생년월일</string>
    <string name="gender">성별</string>
    <string name="deposit">보증금</string>
    <string name="month">월세</string>
    <string name="money">%d 만원</string>
    <string name="eatingHabits">식습관</string>
    <string name="lifePattern">생활패턴</string>
    <string name="mbti">MBTI</string>
    <string name="default_birth">1900/01/01</string>
    <string name="set_birth">%d/%d/%d </string>
    <string name="set_age">%d ~ %d</string>
    <string name="hint_address">주소를 입력하세요.</string>
    <string name="hint_address_detail">주소 나머지 부분을 입력하세요.</string>
    <string name="msg_search_address">검색하기</string>
</resources>