<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="8dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:cardPreventCornerOverlap="false"
        app:contentPadding="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_profile"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.5"
                app:layout_constraintWidth_percent="0.3"
                app:layout_constraintHorizontal_bias="0.05"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.15"
                android:src="@drawable/favorite" />

            <TextView
                android:id="@+id/tv_title_label"
                style="@style/tv_label"
                android:text="닉네임"
                android:fontFamily="@font/nanumbarungothicbold"
                android:textColor="#000000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.05"
                app:layout_constraintStart_toEndOf="@+id/iv_profile"
                app:layout_constraintTop_toTopOf="@+id/iv_profile"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/tv_nickname"
                style="@style/tv_label"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_title_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/tv_title_label"
                app:layout_constraintTop_toTopOf="@+id/tv_title_label"
                tools:text="TextView" />

            <TextView
                android:id="@+id/tv_location_label"
                style="@style/tv_label"
                android:text="@string/location"
                android:fontFamily="@font/nanumbarungothicbold"
                android:textColor="#000000"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.05"
                app:layout_constraintStart_toEndOf="@+id/iv_profile"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_label"
                app:layout_constraintVertical_bias="0.05" />

            <TextView
                android:id="@+id/tv_location"
                style="@style/tv_label"
                android:layout_marginStart="10dp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_location_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/tv_location_label"
                app:layout_constraintTop_toTopOf="@+id/tv_location_label"
                tools:text="TextView" />

            <TextView
                android:id="@+id/tv_condition_gender_label"
                style="@style/tv_SizeWrap"
                android:layout_marginTop="5dp"
                android:text="@string/gender"
                android:fontFamily="@font/nanumbarungothicbold"
                android:textColor="#000000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/tv_condition_eatingHabits_label"
                app:layout_constraintTop_toBottomOf="@+id/tv_condition_eatingHabits_label"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/tv_condition_gender"
                style="@style/tv_condition"
                app:layout_constraintBottom_toBottomOf="@+id/tv_condition_gender_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.03"
                app:layout_constraintStart_toEndOf="@+id/tv_condition_gender_label"
                app:layout_constraintTop_toTopOf="@+id/tv_condition_gender_label"
                tools:text="TextView" />

            <TextView
                android:id="@+id/tv_condition_eatingHabits_label"
                style="@style/tv_SizeWrap"
                android:text="@string/eatingHabits"
                android:fontFamily="@font/nanumbarungothicbold"
                android:textColor="#000000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/iv_profile"
                app:layout_constraintTop_toBottomOf="@+id/iv_profile" />

            <TextView
                android:id="@+id/tv_condition_eatingHabits"
                style="@style/tv_condition"
                app:layout_constraintBottom_toBottomOf="@+id/tv_condition_eatingHabits_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.03"
                app:layout_constraintStart_toEndOf="@+id/tv_condition_eatingHabits_label"
                app:layout_constraintTop_toTopOf="@+id/tv_condition_eatingHabits_label"
                tools:text="TextView" />

            <TextView
                android:id="@+id/tv_condition_lifePattern_label"
                style="@style/tv_SizeWrap"
                android:text="@string/lifePattern"
                android:fontFamily="@font/nanumbarungothicbold"
                android:textColor="#000000"
                app:layout_constraintBottom_toBottomOf="@+id/tv_condition_gender"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.03"
                app:layout_constraintStart_toEndOf="@+id/tv_condition_gender"
                app:layout_constraintTop_toTopOf="@+id/tv_condition_gender"
                app:layout_constraintVertical_bias="0.1" />

            <TextView
                android:id="@+id/tv_condition_lifePattern"
                style="@style/tv_condition"
                app:layout_constraintBottom_toBottomOf="@+id/tv_condition_lifePattern_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.03"
                app:layout_constraintStart_toEndOf="@+id/tv_condition_lifePattern_label"
                app:layout_constraintTop_toTopOf="@+id/tv_condition_lifePattern_label"
                tools:text="TextView" />

            <TextView
                android:id="@+id/tv_condition_mbti_label"
                style="@style/tv_SizeWrap"
                android:text="@string/mbti"
                android:fontFamily="@font/nanumbarungothicbold"
                android:textColor="#000000"
                app:layout_constraintBottom_toBottomOf="@+id/tv_condition_eatingHabits"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.03"
                app:layout_constraintStart_toEndOf="@+id/tv_condition_eatingHabits"
                app:layout_constraintTop_toTopOf="@+id/tv_condition_eatingHabits"
                app:layout_constraintVertical_bias="0.1" />

            <TextView
                android:id="@+id/tv_condition_mbti"
                style="@style/tv_condition"
                app:layout_constraintBottom_toBottomOf="@+id/tv_condition_mbti_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.08"
                app:layout_constraintStart_toEndOf="@+id/tv_condition_mbti_label"
                app:layout_constraintTop_toTopOf="@+id/tv_condition_mbti_label"
                tools:text="TextView" />

            <TextView
                android:id="@+id/textView25"
                style="@style/tv_label"
                android:text="깐부에게 하고싶은 말"
                android:fontFamily="@font/nanumbarungothicbold"
                android:textColor="#000000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tv_location_label"
                app:layout_constraintTop_toBottomOf="@+id/tv_location_label"
                app:layout_constraintVertical_bias="0.07" />

            <TextView
                android:id="@+id/tv_comment"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                app:layout_constraintBottom_toTopOf="@+id/tv_condition_mbti"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textView25"
                app:layout_constraintTop_toBottomOf="@+id/textView25"
                tools:text="TextView" />

            <ImageView
                android:id="@+id/iv_recommend"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:adjustViewBounds="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@drawable/recommend_mbti" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>